<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <com.bobekos.bobek.scanner.BarcodeView
        android:id="@+id/barcodeView"
        android:layout_width="match_parent"
        android:layout_height="300dp"/>

    <TextView
        android:id="@+id/scanHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/scan_History"
        android:paddingTop="400px"/>

    <LinearLayout
        android:id="@+id/historyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="301dp"
        android:visibility="invisible"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/dateHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addCar_date_in"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/plateHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addCar_Plate"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/colorHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addCar_Color"
            android:textSize="25dp"/>
        <TextView
            android:id="@+id/makeHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addCar_Make"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/totalHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="30dp"/>

        <ImageView
            android:id="@+id/barcodeImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"/>
        <Button
            android:id="@+id/payTicket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pay" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>