<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.parking.management.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/history"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search_plate"
        android:orderInCategory="100"
        android:title="@string/action_search_plate"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search_printer"
        android:orderInCategory="100"
        android:icon="@android:drawable/stat_sys_data_bluetooth"
        android:title="@string/action_search_printer"
        app:showAsAction="never" />


</menu>
